[package]
name = "arduino-mqtt-pin"
version = "0.1.0"
authors = ["Tomas Jakstas <tom.jakstas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.0"
yaml-rust = "0.4.3"
chrono = "0.4"
mosquitto-client = "0.1.5"
arraydeque = "0.4"
log = "0.4.0"
num = "0.2.0"
derive-new = "0.5"
